force-app/main/default/objects/ERP_document__c/ERP_document__c.object-meta.xml
<CustomObject>
    <label>ERP document</label>
    <nameField>
        <label>ERP document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>