force-app/main/default/objects/ERP_document__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>ERP documents</relationshipLabel>
    <relationshipName>ERP_documents</relationshipName>
    <type>Lookup</type>
</CustomField>