force-app/main/default/objects/ERP_document__c/fields/ERP_id__c.field-meta.xml
<CustomField>
    <fullName>ERP_id__c</fullName>
    <label>ERP id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>