force-app/main/default/objects/ERP_document__c/fields/Inventory_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transfer</label>
    <referenceTo>GMBLASERP__Inventory_Transfer__c</referenceTo>
    <relationshipLabel>ERP documents</relationshipLabel>
    <relationshipName>ERP_documents</relationshipName>
    <type>Lookup</type>
</CustomField>