force-app/main/default/objects/ERP_document__c/fields/PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>PDF_Link__c</fullName>
    <label>PDF Link</label>
    <type>Url</type>
</CustomField>