force-app/main/default/objects/ERP_document__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Companion II</fullName>
            </value>
            <value>
                <fullName>Companion Maxum</fullName>
            </value>
            <value>
                <fullName>Advantage 70-P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>